--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 data-mdb-ripple-color="light"
               >
                 <img
-                  src="./images/portfolio/Wellcome/MG_6507 (1080p).jpg"
+                  src="MG_6507 (1080p).jpg"
                   class="img-fluid rounded"
                   alt="..."
                 />
