--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 data-mdb-ripple-color="light"
               >
                 <img
-                  src="MG_6507 (1080p).jpg"
+                  src="./images/portfolio/Wellcome/_MG_6507 (1080p).jpg"
                   class="img-fluid rounded"
                   alt="..."
                 />
@@ -182,7 +182,7 @@
                 moments and turning them into works of art. Over the years, I
                 have had the privilege of taking countless photographs, each one
                 holding a special place in my heart. In this portfolio, I have
-                curated a selection of my favorite images, each one showcasing
+                curated a selection of my favorite images, each o.ne showcasing
                 my unique style and approach to photography. Whether it's a
                 breathtaking landscape, a candid moment between loved ones, or a
                 unique perspective on an everyday object, I strive to capture
