--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <li class="nav-item me-3 me-lg-0">
               <a
                 class="nav-link"
-                href="https://www.facebook.com/FAILsystem"
+                href="https://www.facebook.com/DimitrisKarakonstantinou/"
                 rel="follow"
               >
                 <i class="fab fa-facebook-f"></i>
@@ -168,7 +168,7 @@
                 data-mdb-ripple-color="light"
               >
                 <img
-                  src="./images/portfolio/Wellcome/MG_6507 (1080p).jpg"
+                  src="./images/portfolio/Wellcome/MG6507(1080p).jpg"
                   class="img-fluid rounded"
                   alt="..."
                 />
