--- a/About.html
+++ b/About.html
@@ -85,7 +85,7 @@
             <li class="nav-item me-3 me-lg-0">
               <a
                 class="nav-link"
-                href="https://www.facebook.com/FAILsystem"
+                href="https://www.facebook.com/DimitrisKarakonstantinou/"
                 rel="follow"
               >
                 <i class="fab fa-facebook-f"></i>
